@@ -1,3 +1,7 @@
+2005-09-28 Parick Galbraith <patg@mysql.com> (3.0002_3)
+  * Added code to  mysql_st_internal_execute that determines whether the
+    SV *h is a sth or dbh, and then imports imp_dbh appropriately
+
 2005-09-26 Parick Galbraith <patg@mysql.com> (3.0002_2)
   * Fixed bug in dbd_st_execute where imp_sth was being 
     imported unecessarily, when only imp_dbh is needed. This caused a 
@@ -841,7 +845,7 @@ Fri Oct 24 01:29:08 1997  Jochen Wiedmann  <joe@ispsoft.de> (1.1816)
 	* lib/Msql/Statement.pm: Fixed use of Msql::TEXT_TYPE without
 	  checking whether we are running Msql 1.
 
-$Id: ChangeLog 1454 2005-08-04 02:46:19Z capttofu $
+$Id: ChangeLog 1534 2005-09-28 17:00:16Z capttofu $
 
 DBD::mysql for DBI - Written by Jochen Wiedmann <joe@ispsoft.de>
 
